--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "next": "12.1.6",
     "next-cookies": "^2.0.3",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-multi-carousel": "^2.8.0",
     "react-paginate": "^8.1.3",
