--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.1.0",
     "react-multi-carousel": "^2.8.0",
     "react-paginate": "^8.1.3",
