--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.10",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "js-cookie": "^3.0.1",
