fix: main features

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "no-alert": "off",
+    "no-nested-ternary": "off",
     "func-names": "off",
     "no-param-reassign": "off",
     "consistent-return": "off",
