--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_APP_NAME=Peworld Hire
 NEXT_PUBLIC_NODE_ENV=production
-NEXT_PUBLIC_API_URL=peworld-hire.herokuapp.com/
+NEXT_PUBLIC_API_URL=https://peworld-hire.herokuapp.com/
