--- a/package.json
+++ b/package.json
@@ -11,35 +11,34 @@
   "dependencies": {
     "@fontsource/open-sans": "^4.5.10",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
-    "multiselect-react-dropdown": "^2.0.22",
     "next": "12.1.6",
     "next-cookies": "^2.0.3",
+    "next-persist": "^1.2.4",
     "next-redux-wrapper": "^7.0.5",
     "nextjs-progressbar": "^0.0.14",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-content-loader": "^6.2.0",
-    "react-custom-radio-buttons-group": "^1.0.5",
     "react-dom": "18.1.0",
-    "react-drag-drop-files": "^2.3.5",
-    "react-multi-carousel": "^2.8.0",
     "react-paginate": "^8.1.3",
-    "react-radio-buttons": "^1.2.2",
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^5.10.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.4.1",
-    "sweetalert2": "^11.4.14"
+    "sweetalert2": "^11.4.14",
+    "swiper": "^8.2.4"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.12",
