Do formatting fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,11 @@
     "consistent-return": "off",
     "default-param-last": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "settings": {
+      "import/resolver": {
+        "node": {"extensions": [".js", ".jsx", ".ts", ".tsx"]}
+      }
+    },
     "prettier/prettier": [
       "error",
       {
