Do formatting fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,11 +39,7 @@
     "consistent-return": "off",
     "default-param-last": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "settings": {
-      "import/resolver": {
-        "node": {"extensions": [".js", ".jsx", ".ts", ".tsx"]}
-      }
-    },
+    "import/no-unresolved": "off",
     "prettier/prettier": [
       "error",
       {
