--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.4.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "18.1.0",
+    "react-input-emoji": "^4.1.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-select": "^5.3.2",
@@ -37,6 +38,7 @@
     "redux-persist": "^5.10.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.14",
     "swiper": "^8.2.4"
   },
